--- a/data/cards/08034697.yaml
+++ b/data/cards/08034697.yaml
@@ -3,7 +3,7 @@ password: 8034697
 name:
   en: Magical Marionette
   de: Magische Marionette
-  es: Marionetta Magica
+  es: Marioneta Mágica
   fr: Marionnette Magique
   it: Marionetta Magica
   pt: Marionete Mágica
@@ -17,15 +17,15 @@ text:
   en: |-
     Each time a Spell Card is activated, place 1 Spell Counter on this card when that Spell Card resolves. Gains 200 ATK for each Spell Counter on it. You can remove 2 Spell Counters from this card, then target 1 monster on the field; destroy it.
   de: |-
-    Jedes Mal, wenn eine Zauberkarte aktiviert wird, lege 1 Zauberzählmarke auf diese Karte. Diese Karte erhält 200 ATK für jede Zauberzählmarke auf dieser Karte. Du kannst 2 Zauberzählmarken von dieser Karte entfernen, um 1 Monster auf dem Spielfeld zu zerstören.
+    Jedes Mal, wenn eine Zauberkarte aktiviert wird, lege 1 Zauberzählmarke auf diese Karte, wenn jene Zauberkarte aufgelöst wird. Erhält für jede Zauberzählmarke auf dieser Karte 200 ATK. Du kannst 2 Zauberzählmarken von dieser Karte entfernen und dann 1 Monster auf dem Spielfeld wählen; zerstöre es.
   es: |-
-    Cada vez que tú o tu adversario activen 1 Carta Mágica, pon 1 Contador Mágico en esta carta. Aumenta el ATK de esta carta en 200 puntos por cada Contador Mágico en esta carta. Puedes retirar 2 Contadores Mágicos de esta carta para destruir 1 monstruo en el Campo.
+    Cada vez que una Carta Mágica es activada, pon 1 Contador Mágico en esta carta cuando esa Carta Mágica se resuelva. Gana 200 ATK por cada Contador Mágico en ella. Puedes retirar 2 Contadores Mágicos de esta carta, y después selecciona 1 monstruo en el Campo; destrúyelo.
   fr: |-
-    Chaque fois qu'une Carte Magie est activée, placez 1 Compteur Magie sur cette carte. Carte carte gagne 200 points d'ATK pour chaque Compteur Magie sur elle. Vous pouvez retirer 2 Compteurs Magie de cette carte pour détruire 1 monstre sur le Terrain.
+    Chaque fois qu'une Carte Magie est activée, placez 1 Compteur Magie sur cette carte lorsque la Carte Magie est résolue. Gagne 200 ATK pour chaque Compteur Magie sur elle. Vous pouvez retirer 2 Compteurs Magie de cette carte, puis ciblez 1 monstre sur le Terrain ; détruisez-le.
   it: |-
-    Ogni volta che 1 Carta Magia viene attivata, metti 1 Segnalino Magia su questa carta. Questa carta guadagna 200 ATK per ogni Segnalino Magia su di essa. Puoi rimuovere 2 Segnalini Magia da questa carta per distruggere 1 mostro sul Terreno.
+    Ogni volta che una Carta Magia viene attivata, metti 1 Segnalino Magia su questa carta quando quella Carta Magia si risolve. Guadagna 200 ATK per ogni Segnalino Magia su di essa. Puoi rimuovere 2 Segnalini Magia da questa carta, poi scegliere come bersaglio 1 mostro sul Terreno; distruggilo.
   pt: |-
-    Cada vez que um Spell Card é ativado, coloque 1 Spell Counter nesta carta. Esta carta ganha 200 de ATK para cada Spell Card nela. Você pode remover 2 Spell Card desta carta para destruir 1 monstro no campo.
+    Sempre que um Card de Magia for ativado, coloque 1 Marcador de Magia neste card quando esse Card de Magia resolver. Ganha 200 de ATK para cada Marcador de Magia nele. Você pode remover 2 Marcadores de Magia deste card e, depois, escolha 1 monstro no campo; destrua-o.
   ja: |-
     このカードがフィールド上に表側表示で存在する限り、自分または相手が魔法カードを発動する度に、このカードに魔力カウンターを１つ置く。このカードに乘っている魔力カウンター１つにつき、このカードの攻擊力は２００ポイントアップする。また、このカードに乘っている魔力カウンターを２つ取り除く事で、フィールド上に存在するモンスター１體を破壞する。
   ko: |-
