--- a/data/cards/21323861.yaml
+++ b/data/cards/21323861.yaml
@@ -6,7 +6,7 @@ name:
   es: Lluvia Ácida
   fr: Pluie Acide
   it: Pioggia Acida
-  pt:
+  pt: Chuva Ácida
   ja: <ruby>酸<rt>さん</rt></ruby>の<ruby>嵐<rt>あらし</rt></ruby>
   ja_romaji: San no Arashi
   ko: 산성 폭풍
@@ -17,14 +17,15 @@ text:
   en: |-
     Destroy all Machine monsters on the field.
   de: |-
-    Zerstöre alle offenen Monster vom Typ Maschine auf dem Spielfeld.
+    Zerstöre alle Maschine-Monster auf dem Spielfeld.
   es: |-
-    Destroye todos los monstruos de Tipo Máquina boca arriba en el campo.
+    Destruye todos los monstruos Máquina en el Campo.
   fr: |-
-    Détruisez tous les monstres face recto de Type Machine sur le Terrain.
+    Détruisez tous les monstres Machine sur le Terrain.
   it: |-
-    Distruggi tutti i mostri scoperti di Tipo Macchina sul Terreno.
-  pt:
+    Distruggi tutti i mostri Macchina sul Terreno.
+  pt: |-
+    Destrua todos os monstros Máquina no campo.
   ja: |-
     フィールド上に表側表示で存在する機械族モンスターを全て破壊する。
   ko: |-
