--- a/data/cards/39730727.yaml
+++ b/data/cards/39730727.yaml
@@ -8,7 +8,7 @@ name:
   it: Perfezione Impeccabile del Tenyi
   pt: Perfeição Sem Falhas dos Tenyi
   ja: <ruby>天<rt>てん</rt></ruby><ruby>威<rt>い</rt></ruby><ruby>無<rt>む</rt></ruby><ruby>崩<rt>ほう</rt></ruby>の<ruby>地<rt>ち</rt></ruby>
-  ja_romaji: Ten'i Muhō no Chi
+  ja_romaji: Ten'imuhō no Chi
   ko: 천위무붕의 땅
   ko_rr: Cheonwimubung-ui Ttang
   zh-TW:
