--- a/data/cards/43797906.yaml
+++ b/data/cards/43797906.yaml
@@ -6,7 +6,7 @@ name:
   es: Guerrero de Atlantis
   fr: Guerrier de l'Atlantide
   it: Guerriero di Atlantide
-  pt:
+  pt: Guerreiro da Atlântida
   ja: アトランティスの<ruby>戦<rt>せん</rt></ruby><ruby>士<rt>し</rt></ruby>
   ja_romaji: Atorantisu no Senshi
   ko: 아틀란티스의 전사
@@ -19,12 +19,15 @@ text:
   de: |-
     Du kannst diese Karte auf den Friedhof abwerfen; füge deiner Hand 1 „Ein Legendärer Ozean“ von deinem Deck hinzu.
   es: |-
+    (Esta carta no se trata como una carta "Atlantis").
     Puedes descartar esta carta al Cementerio; añade a tu mano, desde tu Deck, 1 "Un Océano Legendario".
   fr: |-
+    (Cette carte n'est pas traitée comme une carte "Atlantide".)
     Vous pouvez défausser cette carte au Cimetière ; ajoutez 1 "Océan Légendaire" depuis votre Deck à votre main.
   it: |-
     Puoi scartare questa carta al Cimitero; aggiungi 1 "Un Oceano Leggendario" dal tuo Deck alla tua mano.
-  pt:
+  pt: |-
+    Você pode descartar este card para o Cemitério; adicione 1 "Um Oceano Lendário" do seu Deck à sua mão.
   ja: |-
     ①：このカードを手札から墓地へ捨てて発動できる。デッキから「伝説の都 アトランティス」１枚を手札に加える。
   ko: |-
