--- a/data/cards/58169731.yaml
+++ b/data/cards/58169731.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     When an opponent's monster declares an attack: All Attack Position monsters your opponent currently controls lose 800 ATK for each monster they control.
   de: |-
-    Wenn ein Monster eines Gegners einen Angriff deklariert: Alle Monster in Angriffsposition, die dein Gegner kontrolliert, verlieren 800 ATK für jedes Monster, das er kontrolliert.
+    Wenn ein Monster eines Gegners einen Angriff deklariert: Alle Monster in Angriffsposition, die dein Gegner derzeit kontrolliert, verlieren für jedes Monster, das er kontrolliert, 800 ATK.
   es: |-
-    Cuando un monstruo del adversario declara un ataque: todos los monstruos en Posición de Ataque que controle tu adversario pierden 800 ATK por cada monstruo que controle.
+    Cuando un monstruo del adversario declara un ataque: todos los monstruos en Posición de Ataque que controle tu adversario en este momento pierden 800 ATK por cada monstruo que controle.
   fr: |-
-    Lorsqu'un monstre de l'adversaire déclare une attaque : tous les monstres en Position d'Attaque contrôlés par votre adversaire perdent 800 ATK pour chaque monstre qu'il contrôle.
+    Lorsqu'un monstre de l'adversaire déclare une attaque : tous les monstres en Position d'Attaque actuellement contrôlés par votre adversaire perdent 800 ATK pour chaque monstre qu'il contrôle.
   it: |-
-    Quando un mostro dell'avversario dichiara un attacco: tutti i mostri in Posizione di Attacco controllati dal tuo avversario perdono 800 ATK per ogni mostro che controlla.
+    Quando un mostro dell'avversario dichiara un attacco: tutti i mostri in Posizione di Attacco attualmente controllati dal tuo avversario perdono 800 ATK per ogni mostro che controlla.
   pt: |-
-    Quando um monstro do oponente declarar um ataque: todos os monstros em Posição de Ataque que seu oponente controla perdem 800 de ATK para cada monstro que ele controla.
+    Quando um monstro do oponente declarar um ataque: todos os monstros em Posição de Ataque que seu oponente controla atualmente perdem 800 de ATK para cada monstro que ele controla.
   ja: |-
     ①：相手モンスターの攻撃宣言時に発動できる。相手フィールドの全ての攻撃表示モンスターの攻撃力は、相手フィールドのモンスターの数×８００ダウンする。
   ko: |-
