--- a/data/cards/60643553.yaml
+++ b/data/cards/60643553.yaml
@@ -184,6 +184,11 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: DBVS-JP043
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: DANE-KR025
     set_name: Dark Neostorm
