--- a/data/cards/69123138.yaml
+++ b/data/cards/69123138.yaml
@@ -6,7 +6,7 @@ name:
   es: Zera la Manta
   fr: Zéra, la Mante
   it: Zera la Manta
-  pt: Zera o Mante
+  pt: Zera, o Mante
   ja: ゼラ
   ja_romaji: Zera
   ko: 제라
@@ -17,14 +17,15 @@ text:
   en: |-
     You can Ritual Summon this card with "Zera Ritual".
   de: |-
-    Diese Karte kann nur mit der Ritualzauberkarte "Zera-Ritual" als Ritualbeschwörung beschworen werden.
-  es:
+    Du kannst diese Karte mit „Zera-Ritual“ als Ritualbeschwörung beschwören.
+  es: |-
+    Puedes Invocar esta carta por Ritual con "Ritual de Zera".
   fr: |-
-    Cette carte ne peut être Invoquée Rituellement que par la Carte Magie Rituelle "Rituel de Zéra".
+    Vous pouvez Invoquer Rituellement cette carte avec "Rituel de Zéra".
   it: |-
-    Questa carta può essere Evocata solo tramite Evocazione Rituale utilizzando la Carta Magia Rituale, "Rito di Zera".
+    Puoi Evocare tramite Rituale questa carta con "Rito di Zera".
   pt: |-
-    Esta carta só pode ser convocada por ritual com a carta de mágica de ritual, "Zera Ritual".
+    Você pode Invocar este card por Invocação-Ritual com "Ritual de Zera".
   ja: |-
     「ゼラの儀式」により降臨。
   ko: |-
