--- a/data/cards/74003290.yaml
+++ b/data/cards/74003290.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Wähle 1 offenes als Spezialbeschwörung beschworenes Monster auf dem Spielfeld; annulliere seine Effekte, zusätzlich werden seine Grund-ATK halbiert. Falls ein Monster als Spezialbeschwörung vom Extra Deck deines Gegners beschworen wird, solange diese Karte in deinem Friedhof liegt (außer während des Damage Steps): Du kannst diese Karte setzen, aber verbanne sie, wenn sie das Spielfeld verlässt.
   es: |-
-    Selecciona 1 monstruo boca arriba en el Campo que haya sido Invocado de Modo Especial; niega sus efectos, y además su ATK original se divide a la mitad. Si un monstruo es Invocado de Modo Especial desde el Deck Extra de tu adversario, mientras esta carta esté en tu Cementerio (excepto durante el Damage Step): puedes Colocar esta carta, pero destiérrala cuando deje el Campo.
+    Selecciona 1 monstruo boca arriba en el Campo que haya sido Invocado de Modo Especial; niega sus efectos, y además su ATK original se divide a la mitad. Si un monstruo es Invocado de Modo Especial desde el Deck Extra de tu adversario, mientras esta carta está en tu Cementerio (excepto durante el Damage Step): puedes Colocar esta carta, pero destiérrala cuando deje el Campo.
   fr: |-
     Ciblez 1 monstre face recto Invoqué Spécialement sur le Terrain ; annulez ses effets, et aussi, son ATK d'origine est divisée par deux. Si un monstre est Invoqué Spécialement depuis l'Extra Deck de votre adversaire, tant que cette carte est dans votre Cimetière (sauf durant la Damage Step) : vous pouvez Poser cette carte, mais bannissez-la lorsqu'elle quitte le Terrain.
   it: |-
