--- a/data/cards/74153887.yaml
+++ b/data/cards/74153887.yaml
@@ -21,7 +21,7 @@ text:
   de: |-
     Wenn diese Karte deinem Gegner Kampfschaden zufügt, kannst du 1 dieser Effekte aktivieren:
     ● Füge deiner Hand 1 „Dunkler Skorpion“-Karte von deinem Deck hinzu.
-    ● Wähle 1 „Dunkler Skorpion“-Karte in deinem Friedhof; füge das gewählte Ziel deiner Hand hinzu.
+    ● Wähle 1 „Dunkler Skorpion“-Karte in deinem Friedhof; füge jenes gewählte Ziel deiner Hand hinzu.
   es: |-
     Cuando esta carta inflige daño de batalla a tu adversario, puedes activar 1 de estos efectos:
     ● Añade a tu mano 1 carta "Escorpión Oscuro" en tu Deck.
