--- a/data/cards/74976215.yaml
+++ b/data/cards/74976215.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     While you control another Insect monster, if an Insect monster you control attacks a Defense Position monster, inflict piercing battle damage to your opponent.
   de: |-
-    Solange du ein anderes Monster vom Typ Insekt kontrollierst, während eines Kampfes zwischen einem angreifenden Monster vom Typ Insekt, das du kontrollierst, und einem Monster in Verteidigungsposition, dessen DEF niedriger sind als die ATK des Monsters vom Typ Insekt, füge die Differenz deinem Gegner als Kampfschaden zu.
+    Solange du ein anderes Insekt-Monster kontrollierst, falls ein Insekt-Monster, das du kontrollierst, ein Monster in Verteidigungsposition angreift, füge deinem Gegner durchschlagenden Kampfschaden zu.
   es: |-
-    Mientras controles un monstruo de Tipo Insecto (que no sea esta carta), si un monstruo de Tipo Insecto que controlas ataca a un monstruo en Posición de Defensa, inflige a tu adversario daño de batalla de penetración.
+    Mientras controlas otro monstruo Insecto, si un monstruo Insecto que controlas ataca a un monstruo en Posición de Defensa, inflige daño de batalla de penetración a tu adversario.
   fr: |-
-    Tant que vous contrôlez un monstre de Type Insecte (cette carte exclue), si un monstre de Type Insecte que vous contrôlez attaque un monstre en Position de Défense, infligez des dommages de combat perçants à votre adversaire.
+    Tant que vous contrôlez un autre monstre Insecte, si un monstre Insecte que vous contrôlez attaque un monstre en Position de Défense, infligez des dommages de combat perçants à votre adversaire.
   it: |-
-    Mentre controlli un mostro di Tipo Insetto (oltre a questa carta), se un mostro di Tipo Insetto che controlli attacca un mostro in Posizione di Difesa, infliggi danno da combattimento perforante al tuo avversario.
+    Mentre controlli un altro mostro Insetto, se un mostro Insetto che controlli attacca un mostro in Posizione di Difesa, infliggi danno da combattimento perforante al tuo avversario.
   pt: |-
-    Enquanto você controlar monstro do Tipo Inseto (que não seja este card), se um monstro do Tipo Inseto que você controla atacar um monstro em Posição de Defesa, cause dano de batalha perfurante em seu oponente.
+    Enquanto você controlar outro monstro Inseto, se um monstro Inseto que você controla atacar um monstro em Posição de Defesa, cause dano de batalha perfurante ao seu oponente.
   ja: |-
     自分フィールド上にこのカード以外の昆虫族モンスターが存在する場合、自分フィールド上に存在する昆虫族モンスターが守備表示モンスターを攻撃した時、その守備力を攻撃力が超えていれば、その数値だけ相手ライフに戦闘ダメージを与える。
   ko: |-
