--- a/data/cards/78658564.yaml
+++ b/data/cards/78658564.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Si esta carta ataca, se cambia a Posición de Defensa al final de la Battle Phase, y su posición de batalla no puede ser cambiada hasta la End Phase de tu próximo turno.
   fr: |-
-    Si cette carte attaque, elle est changée en Position de Défense à la fin de la Battle Phase, et jusqu'à la End Phase de votre prochain tour, sa position de combat ne peut pas être changée.
+    Si cette carte attaque, elle est changée en Position de Défense à la fin de la Battle Phase, et sa position de combat ne peut pas être changée jusqu'à la End Phase de votre prochain tour.
   it: |-
     Se questa carta attacca, essa viene messa in Posizione di Difesa alla fine della Battle Phase, e la sua posizione non può essere cambiata fino alla End Phase del tuo prossimo turno.
   pt: |-
