--- a/data/cards/78783370.yaml
+++ b/data/cards/78783370.yaml
@@ -6,7 +6,7 @@ name:
   es: Cañón Tras la Puerta
   fr: Canon Derrière la Porte
   it: Pistola Dietro la Porta
-  pt: Revólver Atrás da Porta
+  pt: O Barril por detrás da Porta
   ja: <ruby>地<rt>じ</rt></ruby><ruby>獄<rt>ごく</rt></ruby>の<ruby>扉<rt>とびら</rt></ruby><ruby>越<rt>ご</rt></ruby>し<ruby>銃<rt>じゅう</rt></ruby>
   ja_romaji: Jigoku no Tobira Goshi Jū
   ko: 지옥문 저편의 총
@@ -17,15 +17,15 @@ text:
   en: |-
     When a Spell/Trap Card, or monster effect, is activated that would inflict damage to you: Your opponent takes the damage instead.
   de: |-
-    Aktiviere diese Karte nur, wenn ein Karteneffekt aktiviert wird, der dir Schaden zufügen würde. Stattdessen erhält dein Gegner den Schaden.
+    Wenn eine Zauber-/Fallenkarte oder ein Monstereffekt aktiviert wird, die oder der dir Schaden zufügen würde: Stattdessen erhält dein Gegner den Schaden.
   es: |-
-    Activa esta carta sólo cuando el efecto de una carta que te fuera a inflijir daño fuera activado. En vez de eso, tu adversario recibe el daño.
+    Cuando una Carta Mágica/de Trampa o efecto de monstruo, que te fuera a infligir daño, es activado: tu adversario recibe el daño en tu lugar.
   fr: |-
-    Activable uniquement lorsqu'un effet de carte qui doit vous infliger des dommages est activé. Votre adversaire subit les dommages à la place.
+    Lorsqu'une Carte Magie/Piège ou un effet de monstre qui va vous infliger des dommages est activé : votre adversaire reçoit les dommages à la place.
   it: |-
-    Attiva solo quando viene attivato l'effetto di una carta che ti infliggerebbe danno. Il tuo avversario subisce il danno al tuo posto.
+    Quando viene attivata una Carta Magia/Trappola, o l'effetto di un mostro, che sta per infliggerti danno: il tuo avversario subisce il danno al tuo posto.
   pt: |-
-    Quando qualquer efeito que inflija dano aos seus Pontos de Vida é ativado (exceto dano de batalha), altere o dano que você recebeu para os Pontos de Vida do oponente.
+    Quando um Card de Magia/Armadilha, ou efeito de monstro, for ativado que causaria dano a você: em vez disso, seu oponente sofre o dano.
   ja: |-
     ダメージを与える効果が発動した時に発動する事ができる。自分が受けるその効果ダメージを相手に与える。
   ko: |-
