--- a/data/cards/84055227.yaml
+++ b/data/cards/84055227.yaml
@@ -6,7 +6,7 @@ name:
   es: Doncella de lo Macabro
   fr: Vierge Macabre
   it: La Fanciulla Macabra
-  pt:
+  pt: Dama do Macabro
   ja: ゲイシャドウ
   ja_romaji: Geishadō
   ko: 게이샤 도우
@@ -17,14 +17,15 @@ text:
   en: |-
     If this card destroys an opponent's monster by battle: Place 1 Spell Counter on it. Gains 200 ATK for each Spell Counter on it.
   de: |-
-    Jedes Mal, wenn diese Karte ein Monster deines Gegners durch Kampf zerstört, lege 1 Zauberzählmarke auf diese Karte. Diese Karte erhält 200 ATK für jede Zauberzählmarke auf dieser Karte.
+    Falls diese Karte ein Monster eines Gegners durch Kampf zerstört: Lege 1 Zauberzählmarke auf diese Karte. Erhält für jede Zauberzählmarke auf dieser Karte 200 ATK.
   es: |-
-    Cada vez que esta carta destruye a un monstruo de tu adversario en batalla, pon 1 Contador Mágico en ella. Esta carta gana 200 ATK por cada Contador Mágico que tenga.
+    Si esta carta destruye un monstruo del adversario en batalla: pon 1 Contador Mágico en ella. Gana 200 ATK por cada Contador Mágico en ella.
   fr: |-
-    Chaque fois que cette carte détruit un monstre de l'adversaire au combat, placez 1 Compteur Magie sur elle. Cette carte gagne 200 points d'ATK pour chaque Compteur Magie sur elle.
+    Si cette carte détruit un monstre de l'adversaire au combat : placez 1 Compteur Magie sur elle. Gagne 200 ATK pour chaque Compteur Magie sur elle.
   it: |-
-    Ogni volta che questa carta distrugge un mostro dell'avversario in battaglia, metti 1 Segnalino Magia su di essa. Questa carta guadagna 200 ATK per ogni Segnalino Magia su di essa.
-  pt:
+    Se questa carta distrugge un mostro dell'avversario in battaglia: metti 1 Segnalino Magia su di essa. Guadagna 200 ATK per ogni Segnalino Magia su di essa.
+  pt: |-
+    Se este card destruir um monstro do oponente em batalha: coloque 1 Marcador de Magia nele. Ganha 200 de ATK para cada Marcador de Magia nele.
   ja: |-
     このカードが戦闘によって相手モンスターを破壊した場合、このカードに魔力カウンターを１つ置く。このカードの攻撃力は、このカードに乗っている魔力カウンターの数×２００ポイントアップする。
   ko: |-
