--- a/data/cards/90330453.yaml
+++ b/data/cards/90330453.yaml
@@ -6,7 +6,7 @@ name:
   es: El último día de la bruja
   fr: Le Dernier Jour de la Sorcière
   it: Ultimo Giorno da Strega
-  pt:
+  pt: Último Dia da Bruxa
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>女<rt>じょ</rt></ruby><ruby>狩<rt>が</rt></ruby>り
   ja_romaji: Majogari
   ko:
@@ -17,14 +17,15 @@ text:
   en: |-
     Destroy all Spellcaster monsters on the field.
   de: |-
-    Zerstöre alle offenen Monster vom Typ Hexer auf dem Spielfeld.
+    Zerstöre alle Hexer-Monster auf dem Spielfeld.
   es: |-
-    Destruye todos los monstruos de Tipo Lanzador de Conjuros boca arriba en el Campo.
+    Destruye todos los monstruos Lanzador de Conjuros en el Campo.
   fr: |-
-    Détruisez tous les monstres face recto de Type Magicien sur le Terrain.
+    Détruisez tous les monstres Magicien sur le Terrain.
   it: |-
-    Distruggi tutti i mostri scoperti di Tipo Incantatore sul Terreno.
-  pt:
+    Distruggi tutti i mostri Incantatore sul Terreno.
+  pt: |-
+    Destrua todos os monstros Mago no campo.
   ja: |-
     フィールド上に表側表示で存在する魔法使い族モンスターを全て破壊する。
   ko:
