--- a/data/cards/yugipedia1001773.yaml
+++ b/data/cards/yugipedia1001773.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Effect Monster
-    Cannot be Link Summoned unless you have a Fiend Monster Card with 3 or more Resonance Counters in your Pendulum Zone. You can only Special Summon "Divine Oddity of Valmonica - Zebufera(s)" once per turn. If this card would be destroyed by battle or card effect, you can remove 3 Resonance Counters from your Pendulum Zone instead. Once per opponent's turn (Quick Effect): You can target 1 of your "Valmonica" Normal Spells/Traps that is banished or in your GY; apply that Spell/Trap's effect when that card is activated.
+    Cannot be Link Summoned unless you have a Fiend Monster Card with 3 or more Resonance Counters in your Pendulum Zone. You can only Special Summon "Divine Oddity of Valmonica - Zebufera(s)" once per turn. If a card(s) you control would be destroyed by battle or card effect, you can remove 3 Resonance Counters from your Pendulum Zone instead. Once per opponent's turn (Quick Effect): You can target 1 of your "Valmonica" Normal Spells/Traps that is banished or in your GY; apply that Spell/Trap's effect when that card is activated.
   de:
   es:
   fr:
