--- a/data/cards/21834870.yaml
+++ b/data/cards/21834870.yaml
@@ -8,7 +8,7 @@ name:
   it: Pugni del Tenyi Senza Rivali
   pt: Punhos do Inigualável Tenyi
   ja: <ruby>天<rt>てん</rt></ruby><ruby>威<rt>い</rt></ruby><ruby>無<rt>む</rt></ruby><ruby>双<rt>そう</rt></ruby>の<ruby>拳<rt>けん</rt></ruby>
-  ja_romaji: Ten'i Musō no Ken
+  ja_romaji: Ten'imusō no Ken
   ko: 천위무쌍의 권
   ko_rr: Cheonwimussang-ui Gwon
   zh-TW:
