--- a/data/cards/25551951.yaml
+++ b/data/cards/25551951.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Once per turn: You can target 1 card your opponent controls; toss a coin 3 times and destroy that target if at least 2 of the results are heads.
   de: |-
-    Einmal pro Spielzug: Du kannst 1 Karte wählen, die dein Gegner kontrolliert; wirf 3 Mal eine Münze und zerstöre das gewählte Ziel, falls mindestens 2 der Ergebnisse Kopf sind.
+    Einmal pro Spielzug: Du kannst 1 Karte wählen, die dein Gegner kontrolliert; wirf 3-mal eine Münze und zerstöre jenes gewählte Ziel, falls mindestens 2 der Ergebnisse Kopf sind.
   es: |-
     Una vez por turno: puedes seleccionar 1 carta que controle tu adversario; lanza una moneda 3 veces y destruye ese objetivo si al menos 2 de los resultados son caras.
   fr: |-
