--- a/data/cards/58257569.yaml
+++ b/data/cards/58257569.yaml
@@ -23,7 +23,7 @@ text:
   fr: |-
     Lorsque cette carte est détruite au combat et envoyée au Cimetière : vous pouvez Invoquer Spécialement 1 monstre "Yeux Rouges" de max. Niveau 7 depuis votre Deck, et si vous le faites, équipez-lui cette carte depuis le Cimetière. Il gagne 300 ATK. Si cette carte est envoyée au Cimetière tant qu'elle est équipée à un monstre : vous pouvez ajouter 1 monstre Dragon de Niveau 1 depuis votre Deck ou Cimetière à votre main.
   it: |-
-    Quando questa carta viene distrutta in battaglia e mandata al Cimitero: puoi Evocare Specialmente 1 mostro "Occhi Rossi" di Livello 7 o inferiore dal tuo Deck e, se lo fai, equipaggia questa carta ad esso dal Cimitero. Esso guadagna 300 ATK. Se questa carta viene mandata al Cimitero mentre è equipaggiata ad un mostro: puoi aggiungere 1 mostro Drago di Livello 1 dal tuo Deck o Cimitero alla tua mano.
+    Quando questa carta viene distrutta in battaglia e mandata al Cimitero: puoi Evocare Specialmente 1 mostro "Occhi Rossi" di Livello 7 o inferiore dal tuo Deck e, se lo fai, equipaggia questa carta a esso dal Cimitero. Esso guadagna 300 ATK. Se questa carta viene mandata al Cimitero mentre è equipaggiata ad un mostro: puoi aggiungere 1 mostro Drago di Livello 1 dal tuo Deck o Cimitero alla tua mano.
   pt: |-
     Quando este card for destruído em batalha e enviado para o Cemitério: você pode Invocar por Invocação-Especial 1 monstro "Olhos Vermelhos" de Nível 7 ou menos do seu Deck e, se isso acontecer, equipe este card do Cemitério a ele. Ele ganha 300 de ATK. Se este card for enviado para o Cemitério enquanto estiver equipado a um monstro: você pode adicionar 1 monstro Dragão de Nível 1 do seu Deck ou Cemitério à sua mão.
   ja: |-
