--- a/data/cards/65338781.yaml
+++ b/data/cards/65338781.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Each time a Spell Card is activated, place 1 Spell Counter on this card when that Spell Card resolves (max. 3). You can Tribute this card with 3 Spell Counters on it; Special Summon 1 "Archfiend" monster from your hand, Deck, or GY. You can banish this card from your GY, then target 1 card you control that you can place a Spell Counter on; place 1 Spell Counter on it.
   de: |-
-    Jedes Mal, wenn eine Zauberkarte aktiviert wird, lege 1 Zauberzählmarke auf diese Karte, wenn die Zauberkarte aufgelöst wird (max. 3). Du kannst diese Karte mit 3 Zauberzählmarken darauf als Tribut anbieten; beschwöre 1 „Erzunterweltler“-Monster als Spezialbeschwörung von deiner Hand, deinem Deck oder deinem Friedhof. Du kannst diese Karte von deinem Friedhof verbannen und dann 1 Karte wählen, die du kontrollierst und auf die du eine Zauberzählmarke legen kannst; lege 1 Zauberzählmarke darauf.
+    Jedes Mal, wenn eine Zauberkarte aktiviert wird, lege 1 Zauberzählmarke auf diese Karte, wenn jene Zauberkarte aufgelöst wird (max. 3). Du kannst diese Karte mit 3 Zauberzählmarken darauf als Tribut anbieten; beschwöre 1 „Erzunterweltler“-Monster als Spezialbeschwörung von deiner Hand, deinem Deck oder deinem Friedhof. Du kannst diese Karte von deinem Friedhof verbannen und dann 1 Karte wählen, die du kontrollierst und auf die du eine Zauberzählmarke legen kannst; lege 1 Zauberzählmarke darauf.
   es: |-
     Cada vez que es activada una Carta Mágica, pon 1 Contador Mágico en esta carta cuando se resuelva esa Carta Mágica (máx. 3). Puedes Sacrificar esta carta con 3 Contadores Mágicos en ella; Invoca de Modo Especial, desde tu mano, Deck o Cementerio, 1 monstruo "Archidemonio". Puedes desterrar esta carta en tu Cementerio, y después seleccionar 1 carta que controles en la que puedas poner un Contador Mágico; pon 1 Contador Mágico en ella.
   fr: |-
@@ -25,7 +25,7 @@ text:
   it: |-
     Ogni volta che viene attivata una Carta Magia, metti 1 Segnalino Magia su questa carta quando quella Carta Magia si risolve (massimo 3). Puoi offrire come Tributo questa carta con 3 Segnalini Magia su di essa; Evoca Specialmente 1 mostro "Arcidemone" dalla tua mano, Deck o Cimitero. Puoi bandire questa carta dal tuo Cimitero, poi scegliere come bersaglio 1 carta che controlli su cui puoi mettere un Segnalino Magia; metti 1 Segnalino Magia su di essa.
   pt: |-
-    Sempre que um Card de Magia for ativado, coloque 1 Marcador de Magia sobre este card quando esse Card de Magia resolver (máx. 3). Você pode oferecer este card com 3 Marcadores de Magia sobre ele como Tributo; Invoque por Invocação-Especial 1 monstro "Arquidemônio" da sua mão, Deck ou Cemitério. Você pode banir este card do seu Cemitério e, depois, escolher 1 card que você controla sobre o qual você poderia colocar um Marcador de Magia; coloque 1 Marcador de Magia sobre ele.
+    Sempre que um Card de Magia for ativado, coloque 1 Marcador de Magia neste card quando esse Card de Magia resolver (máx. 3). Você pode oferecer este card com 3 Marcadores de Magia nele como Tributo; Invoque por Invocação-Especial 1 monstro "Arquidemônio" da sua mão, Deck ou Cemitério. Você pode banir este card do seu Cemitério e, depois, escolha 1 card que você controla no qual você possa colocar um Marcador de Magia; coloque 1 Marcador de Magia nele.
   ja: |-
     ①：このカードがモンスターゾーンに存在する限り、自分または相手が魔法カードを発動する度に、このカードに魔力カウンターを１つ置く（最大３つまで）。②：魔力カウンターが３つ置かれているこのカードをリリースして発動できる。自分の手札・デッキ・墓地から「デーモン」モンスター１体を選んで特殊召喚する。③：自分メインフェイズに墓地のこのカードを除外し、自分フィールドの魔力カウンターを置く事ができるカード１枚を対象として発動できる。そのカードに魔力カウンターを１つ置く。
   ko: |-
