--- a/data/cards/81756897.yaml
+++ b/data/cards/81756897.yaml
@@ -17,13 +17,15 @@ text:
   en: |-
     This card is used to Ritual Summon "Zera the Mant". You must also Tribute monsters from your hand or field whose total Levels equal 8 or more.
   de: |-
-    Mit dieser Karte wird "Zera der Mant" als Ritualbeschwörung beschworen. Biete zusätzlich Monster vom Spielfeld oder deiner Hand als Tribut an, die zusammen 8 oder mehr Stufen haben.
-  es:
+    Diese Karte wird verwendet, um „Zera der Mant“ als Ritualbeschwörung zu beschwören. Du musst zusätzlich Monster von deiner Hand oder Spielfeldseite als Tribut anbieten, deren gemeinsame Stufe 8 oder mehr entspricht.
+  es: |-
+    Esta carta se usa para la Invocación por Ritual de "Zera el Mant". También debes Sacrificar monstruos en tu mano o Campo cuyos Niveles totales sean iguales a 8 o más.
   fr: |-
-    Cette carte est utilisée pour Invoquer Spécialement "Zéra, la Mante". Vous devez également Sacrifier des monstres depuis le Terrain ou votre main avec un total de Niveaux cumulés de 8 ou plus.
+    Cette carte est utilisée pour Invoquer Rituellement "Zéra, la Mante". Vous devez aussi Sacrifier des monstres depuis votre main ou Terrain dont le Niveau total est égal à min. 8.
   it: |-
-    Questa carta è utilizzata per Evocare tramite Evocazione Rituale "Zera la Manta". Devi anche offrire come Tributo, dal terreno o dalla mano, mostri il cui Livello totale sia pari o superiore a 8.
-  pt:
+    Questa carta viene utilizzata per Evocare tramite Rituale "Zera la Manta". Devi anche offrire come Tributo mostri dalla tua mano o Terreno con Livello totale pari o superiore a 8.
+  pt: |-
+    Este card é usado na Invocação-Ritual de "Zera, o Mante". Você também deve oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja igual a 8 ou mais.
   ja: |-
     「ゼラ」の降臨に必要。
     場か手札から、星の数が合計８個以上になるようカードを生け贄に捧げなければならない。
