--- a/data/rush/16326.yaml
+++ b/data/rush/16326.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return 1 face-up monster with 500 or less ATK from your field to the hand. This turn, while this card is face-up, you cannot Tribute Summon monsters with 1500 or more DEF in Attack Position.
+    Return 1 face-up monster with 500 or less ATK from your field to the owner's hand. This turn, while this card is face-up, you cannot Tribute Summon monsters with 1500 or more DEF in Attack Position.
   de:
   es:
   fr:
