--- a/data/rush/16796.yaml
+++ b/data/rush/16796.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Shuffle a face-up Field Spell Card from your field into the Deck.
+    Shuffle a face-up Field Spell Card from your field into the owner's Deck.
   de:
   es:
   fr:
