--- a/data/rush/17544.yaml
+++ b/data/rush/17544.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle the attacking monster into the Deck.
+    Shuffle the attacking monster into the owner's Deck.
   de:
   es:
   fr:
