--- a/data/rush/18347.yaml
+++ b/data/rush/18347.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's Level 8 or lower monster declares an attack on your face-up Maximum Monster, pay 600 LP.
+    When an opponent's Level 8 or lower monster declares an attack targeting your face-up Maximum Monster, pay 600 LP.
   de:
   es:
   fr:
