--- a/data/rush/18754.yaml
+++ b/data/rush/18754.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 3 monsters from the Graveyards into the owners' Decks. Then, if this card is in Maximum Mode, you can shuffle this card into the owner's Deck. If you do, draw 3 cards.
+    Shuffle 3 monsters from the Graveyards into the owner's Decks. Then, if this card is in Maximum Mode, you can shuffle this card into the owner's Deck. If you do, draw 3 cards.
   de:
   es:
   fr:
