--- a/data/rush/16716.yaml
+++ b/data/rush/16716.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack on your face-up Warrior Type monster.
+    When an opponent's monster declares an attack targeting your face-up Warrior Type monster.
   de:
   es:
   fr:
