--- a/data/rush/16717.yaml
+++ b/data/rush/16717.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack on your face-up WIND Attribute monster, shuffle 1 WIND Attribute Normal Monster from your Graveyard into the Deck.
+    When an opponent's monster declares an attack targeting your face-up WIND Attribute monster, shuffle 1 WIND Attribute Normal Monster from your Graveyard into the Deck.
   de:
   es:
   fr:
