--- a/data/rush/17199.yaml
+++ b/data/rush/17199.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Return 1 other face-up Level 5 or higher monster from your field to the hand.
+    Return 1 other face-up Level 5 or higher monster from your field to the owner's hand.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 1 face-down card from your opponent's field into the Deck. Then, if your LP are lower than your opponent's, you can add 1 Level 1 Psychic Type Normal Monster from your Graveyard to your hand.
+    Shuffle 1 face-down card from your opponent's field into the owner's Deck. Then, if your LP are lower than your opponent's, you can add 1 Level 1 Psychic Type Normal Monster from your Graveyard to your hand.
   de:
   es:
   fr:
