--- a/data/rush/17848.yaml
+++ b/data/rush/17848.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return 1 card from the field to the hand.
+    Return 1 card from either side of the field to the owner's hand.
   de:
   es:
   fr:
