--- a/data/rush/17977.yaml
+++ b/data/rush/17977.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 face-up Level 8 or lower monster on your opponent's field to face-down Defense Position. Then, if you have a face-up Level 8 Galaxy Type monster on your field, you can return 1 Defense Position monster from your opponent's field to the hand.
+    Change 1 face-up Level 8 or lower monster on your opponent's field to face-down Defense Position. Then, if you have a face-up Level 8 Galaxy Type monster on your field, you can return 1 Defense Position monster from your opponent's field to the owner's hand.
   de:
   es:
   fr:
