--- a/data/rush/yugipedia1006320.yaml
+++ b/data/rush/yugipedia1006320.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の守備表示モンスターが攻撃を受ける相手モンスターの攻撃宣言時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード５枚を墓地へ送る。その中にモンスターがいた場合、さらに攻撃してきたモンスターの攻撃力はターン終了時まで、［この効果で墓地へ送られたモンスターのレベルの合計］×１００ダウンする。
   ko:
   zh-TW:
   zh-CN:
