--- a/data/cards/41371602.yaml
+++ b/data/cards/41371602.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Cannot be destroyed by your opponent's effects while you control a "Centurion" Monster Card. You can only use each of the following effects of "Stand-Up Centurion!" once per turn. During your Main Phase, if this card was activated this turn: You can send 1 card from your hand to the GY; place 1 "Centurion" monster from your Deck face-up in your Spell & Trap Zone as a Continuous Trap. If a monster(s) is Special Summoned, you can: Immediately after this effect resolves, Synchro Summon 1 Synchro Monster, using monsters you control as material, including a "Centurion" monster.
+    Cannot be destroyed by your opponent's effects while you control a "Centurion" Monster Card. You can only use each of the following effects of "Stand-Up Centurion!" once per turn. During your Main Phase, if this card was activated this turn: You can send 1 card from your hand to the GY; place 1 "Centurion" monster from your Deck face-up in your Spell & Trap Zone as a Continuous Trap. If a monster(s) is Special Summoned, you can (except during the Damage Step): Immediately after this effect resolves, Synchro Summon 1 Synchro Monster, using monsters you control as material, including a "Centurion" monster.
   de:
   es:
   fr:
