--- a/data/cards/04160316.yaml
+++ b/data/cards/04160316.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Place 1 "Centurion" monster from your hand or GY face-up in your Spell & Trap Zone as a Continuous Trap. If a "Centurion" Synchro Monster(s) is Special Summoned to your field while this card is in your GY: You can banish this card, then target 1 "Centurion" monster in your GY; place it face-up in your Spell & Trap Zone as a Continuous Trap. You can only use each effect of "Faith of Centurion" once per turn.
+    Place 1 "Centurion" monster from your hand or GY face-up in your Spell & Trap Zone as a Continuous Trap. If a "Centurion" Synchro Monster(s) is Special Summoned to your field while this card is in your GY (except during the Damage Step): You can banish this card, then target 1 "Centurion" monster in your GY; place it face-up in your Spell & Trap Zone as a Continuous Trap. You can only use each effect of "Faith of Centurion" once per turn.
   de:
   es:
   fr:
