--- a/data/cards/16227633.yaml
+++ b/data/cards/16227633.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a face-up "Memento" monster(s) you control leaves the field because of an opponent's card: Special Summon 1 "Mementoral Tecuhtlica, the Netherskull Dragon" from your hand or Deck, ignoring its Summoning conditions. If your opponent moves a "Memento" monster(s) out of your GY while this card is in your GY: You can banish this card; Special Summon as many "Memento" monsters as possible with different names from your hand and/or Deck. You can only use each effect of "Memento Bone Back" once per turn.
+    If a face-up "Memento" monster(s) you control leaves the field because of an opponent's card: Special Summon 1 "Mementoral Tecuhtlica, the Netherskull Dragon" from your hand or Deck, ignoring its Summoning conditions. If your opponent moves a "Memento" monster(s) out of your GY while this card is in your GY (except during the Damage Step): You can banish this card; Special Summon as many "Memento" monsters as possible with different names from your hand and/or Deck. You can only use each effect of "Memento Bone Back" once per turn.
   de:
   es:
   fr:
