--- a/data/cards/23288411.yaml
+++ b/data/cards/23288411.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by shuffling 5 other "Memento" monsters with different names from your hand and/or GY into the Deck or Extra Deck. If you control no other monsters, this card can attack all your opponent's monsters once each. Once per turn, if your opponent activates a card or effect: You can Special Summon 1 "Memento" monster from your hand or GY.
+    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by shuffling 5 other "Memento" monsters with different names from your hand and/or GY into the Deck or Extra Deck. If you control no other monsters, this card can attack all your opponent's monsters once each. Once per turn, if your opponent activates a card or effect (except during the Damage Step): You can Special Summon 1 "Memento" monster from your hand or GY.
   de:
   es:
   fr:
