--- a/data/cards/26205777.yaml
+++ b/data/cards/26205777.yaml
@@ -2,7 +2,7 @@ konami_id: 6190
 password: 26205777
 name:
   en: Thestalos the Firestorm Monarch
-  de: Thestalos, der Feuersturmmonarch
+  de: Thestalos, der Feuersturmmonhj
   es: Thestalos el Monarca de la Tormenta de Fuego
   fr: Thestalos, le Monarque de la Tempête de Feu
   it: Thestalos il Monarca della Tempesta di Fuoco
