--- a/data/rush/18351.yaml
+++ b/data/rush/18351.yaml
@@ -40,6 +40,9 @@ requirement:
     자신 묘지의 "사이버 드래곤" 1장을 덱 위로 되돌리고 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Destroy 1 face-up Level 8 or lower monster with 2400 or more ATK on your opponent's field.
