--- a/data/rush/yugipedia1004314.yaml
+++ b/data/rush/yugipedia1004314.yaml
@@ -38,6 +38,9 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     This turn, this card's name becomes "Blue-Eyes White Dragon", and if you Fusion Summon "Blue-Eyes Ultimate Dragon", this face-up card can be treated as 2 materials.
