--- a/data/rush/16337.yaml
+++ b/data/rush/16337.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 or lower Plant Type monster from your hand face-up to your field, but place it on the bottom of the Deck during the End Phase.
+    Special Summon 1 Level 7 or lower Plant Type monster from your hand face-up to your field, but place it on the bottom of the owner's Deck during the End Phase.
   de:
   es:
   fr:
