--- a/data/rush/16612.yaml
+++ b/data/rush/16612.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 1 Spell/Trap Card on your opponent's field on the bottom of the Deck.
+    Place 1 Spell/Trap Card on your opponent's field on the bottom of the owner's Deck.
   de:
   es:
   fr:
