--- a/data/rush/18360.yaml
+++ b/data/rush/18360.yaml
@@ -40,9 +40,12 @@ requirement:
     없음
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
-    Shuffle 1 face-up Level 6 monster on your field and 1 face-up Level 7 or 8 monster on your opponent's field into the owners' Decks. This turn, your Level 7 or higher monsters cannot attack.
+    Shuffle 1 face-up Level 6 monster on your field and 1 face-up Level 7 or 8 monster on your opponent's field into the owner's Decks. This turn, your Level 7 or higher monsters cannot attack.
   de:
   es:
   fr:
@@ -65,6 +68,7 @@ series:
 images:
 - index: 1
   image: ExcutieLumiere-RDORP1-JP-SR.png
+  illustration: ExcutieLumiere-G002-JP-VG-artwork.png
 - index: 2
   image: ExcutieLumiere-RDJF23-JP-ScR.png
   illustration: ExcutieLumiere-OW.png
