--- a/data/rush/18682.yaml
+++ b/data/rush/18682.yaml
@@ -40,6 +40,9 @@ requirement:
     이 카드를 일반 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Add Beast Type monsters from your Graveyard to your hand equal to [the number of monsters Tributed for the Tribute Summon of this card].
