--- a/data/rush/16576.yaml
+++ b/data/rush/16576.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of each player's Deck to the Graveyard, then, if a monster was sent to the Graveyard by this effect, inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 400.
+    Send the top 2 cards of each player's Deck to the Graveyard. Then, if a monster was sent to the Graveyard by this effect, inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 400.
   de:
   es:
   fr:
