--- a/rush.yaml
+++ b/rush.yaml
@@ -30080,7 +30080,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send 1 Plant Type monster from your hand to the Graveyard. Then, Special Summon 1 "Etraynze the Shadow Flower Ninja" from your Graveyard face-up to your field, but place it on the bottom of the Deck during the End Phase. This turn, this card cannot attack directly.
+    Send 1 Plant Type monster from your hand to the Graveyard. Then, Special Summon 1 "Etraynze the Shadow Flower Ninja" from your Graveyard face-up to your field, but place it on the bottom of the owner's Deck during the End Phase. This turn, this card cannot attack directly.
   de:
   es:
   fr:
@@ -33537,7 +33537,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of each player's Deck to the Graveyard, then, if a monster was sent to the Graveyard by this effect, inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 400.
+    Send the top 2 cards of each player's Deck to the Graveyard. Then, if a monster was sent to the Graveyard by this effect, inflict damage to your opponent equal to [the number of monsters sent to the Graveyard by this effect] x 400.
   de:
   es:
   fr:
@@ -49142,7 +49142,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add all Cyberse Type monsters from your Graveyard to your hand, then place this card from your field on the bottom of the Deck.
+    Add all Cyberse Type monsters from your Graveyard to your hand. Then, place this card from your field on the bottom of the owner's Deck.
   de:
   es:
   fr:
@@ -115960,6 +115960,66 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1006320
+---
+konami_id:
+name:
+  en: Twin Edge Fire Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ツインエッジ・ファイア・ドラゴン
+  ja_romaji: Tsuin Ejji Faia Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If your opponent has a face-up Level 7 or higher monster on their field, send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up Dragon Type monster on your field gains 500 ATK until the end of this turn. Then, if it was "Twin Edge Dragon", it gains 500 more ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: LIGHT
+level: 3
+atk: 1000
+def: 0
+images:
+- index: 1
+  image: TwinEdgeFireDragon-RDMRP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/MRP2-JP029
+    set_name: Megaroad Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1006408
 ---
 konami_id:
 name:
