--- a/data/rush/16579.yaml
+++ b/data/rush/16579.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard, then you can place 1 random card from your opponent's hand on the bottom of the Deck.
+    Send the top card of your Deck to the Graveyard. Then, you can place 1 random card from your opponent's hand on the bottom of the Deck.
   de:
   es:
   fr:
