--- a/rush.yaml
+++ b/rush.yaml
@@ -33744,7 +33744,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard, then you can place 1 random card from your opponent's hand on the bottom of the Deck.
+    Send the top card of your Deck to the Graveyard. Then, you can place 1 random card from your opponent's hand on the bottom of the Deck.
   de:
   es:
   fr:
