--- a/data/cards/57270476.yaml
+++ b/data/cards/57270476.yaml
@@ -8,7 +8,7 @@ name:
   it: Richiamo della Bara
   pt: Isca do Sepultura
   ja: <ruby>墓<rt>はか</rt></ruby><ruby>場<rt>ば</rt></ruby>からの<ruby>誘<rt>いざな</rt></ruby>い
-  ja_romaji: Hakaba-kara no Izanai
+  ja_romaji: Hakaba kara no Izanai
   ko: 무덤으로의 유혹
   ko_rr:
   zh-TW:
